# random-my-music

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  style.css  tailwind.config.js
.github/workflows/: static.yml
backend/: .gitignore  Cargo.toml
backend/config/: default.toml
backend/src/: main.rs  settings.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css  tailwind.config.js
frontend/src/: app.rs  main.rs  router.rs
frontend/src/api/: mod.rs  types.rs  user_api.rs
frontend/src/components/: alert.rs  list_pagination.rs  media_link.rs  menu.rs  mod.rs  spinner.rs
frontend/src/pages/: album_page.rs  artist_page.rs  genre_page.rs  history_page.rs  home_page.rs  login_page.rs  mod.rs  profile_page.rs  register_page.rs
frontend/styles/: tailwind.css
public/: res.json
rym_backend/: Cargo.toml  Dockerfile
rym_backend/src/: main.rs
rym_frontend/: Cargo.toml  Trunk.toml
rym_frontend/src/: app.rs
rym_frontend/src/api/: user_api.rs
rym_frontend/src/components/: form_input.rs  loading_button.rs  menu.rs  mod.rs  spinner.rs
rym_frontend/src/pages/: about_page.rs  home_page.rs  login_page.rs  profile_page.rs
src/: app.rs  main.rs  router.rs  store.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: types.rs  user_api.rs
src/components/: form_input.rs  media_link.rs  menu.rs  mod.rs
src/pages/: about_page.rs  album_page.rs  home_page.rs  login_page.rs  mod.rs  profile_page.rs  register_page.rs
