[package]
name = "random-my-music-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version="0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde_json = "1.0"
# reqwest = { version = "0.11.14", features = ["blocking", "json"] }
# tokio = { version = "1", features = ["full"] }
gloo = "0.8.0"
gloo-net = { version="0.2.6", features = ["json"] }
gloo-console = "0.2.3"
gloo-timers = { version="0.2.6", features = ["futures"] }
gloo-storage = "0.2.2"
uuid = { version="1.3.0", features = ["v4", "js"] }
validator = { version = "0.16.0", features = ["derive"] }
yewdux = "0.9.2"

[workspace]
members = ["src-tauri", "rym_backend"]

[profile.release]
opt-level = 'z'
lto = true
