[package]
name = "rym_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.140", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros", "json"] }
tower-http = { version = "0.3.5", features = ["cors", "set-header", "fs"] }
tower = "0.4.13"
redis = { version = "0.22.3", features = ["tokio-comp", "aio"] }
headers = "0.3.8"
async-trait = "0.1.64"
axum-sessions = "0.4.1"
sha3 = "0.10.6"
